[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins
[+] Administration: Paramètres > Configuration avancée -> Ajout du choix de l'emplacement des fichiers de configuration (dossier)
[+] Administration: Paramètres > Options d'affichage > Éditer les fichiers du thème : edition des fichiers dans les sous-dossiers
[+] Amélioration de la traduction en allemand (contribution Jürgen K.)
[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[+] plxShow: ajout de la méthode artCatIds()
[+] plxShow: ajout de la méthode artActiveCatId()
[+] Gestionnaire de médias: tri des dossiers dans le déroulant 'Dossier'
[+] plxPlugin: ajout de la fonction setAdminMenu pour personnaliser le menu permettant d'accèder à la page admin.php d'un plugin
[+] Ajout du paramètre thumbs dans le fichier de configuration de PluXml pour création ou pas des miniatures
[+] plxShow:pageTitle() : positionnement du titre du site en dernier pour améliorer les référencements (contribution Jos)
[-] plxShow: suppression de la méthode artCatId()
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
[-] Suppression du thème mobile.defaut
BUG Pas d'affichage des articles affectés à plusieurs catégories si une catégorie est inactive
BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
BUG plxPlugins::getInfos(): mauvais test sur la récupération du site
BUG sitemap: mauvais format de date dans la balise lastmod
BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::makeThumb() : problème si largeur ou hauteur non renseignée
BUG plxUtils::strCut() : problème pour couper une chaine de caractère avec l'encodage UTF-8
BUG Réécriture d'url: mauvaise gestion des paramètres dans l'url (&)
BUG plxShow::artAuthorInfos() : erreur si l'auteur n'existe plus
BUG plxShow::staticList() : tri des menus différents si paramètre extra renseigné ou pas